# garden-series-01

./: README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy-prod.yml
garden/: alembic.ini  main.py
garden/alembic/: env.py
garden/alembic/versions/: 2025_09_26_0022-dd82f6c39003_create_table_messages.py  2025_09_26_0128-fb878fa3a68a_initial_migration.py  2025_09_26_1126-0ca3c4c1f46f_add_created_add_updated_at_in_base.py  2025_09_29_1140-05b5b0a2396e_clear_table_messages.py  2025_09_30_0100-5ec7dcd4d5b2_change_field_author_to_caption.py  2025_09_30_0125-d6a687c7831c_delete_author_make_caption_not_nullable.py  2025_09_30_0128-44e17c2988cd_del_table_messages.py  2025_10_03_1235-3d9b166ea415_add_table_plants.py  2025_10_04_0022-424f0bb37a75_add_table_plants.py  2025_10_25_1250-b3895dcd698f_add_data_in_db.py
garden/core/: config.py
garden/crud/: __init__.py  message.py  plant.py
garden/locales/: en.json  ru.json
garden/models/: __init__.py  base.py  db_helper.py  message.py  plant.py
garden/routes/: __init__.py
garden/routes/api/: __init__.py  messages.py  plants.py
garden/routes/view/: __init__.py  home.py  user.py
garden/routes/views/: __init__.py  index.py  plants.py
garden/routes/web/: plants.py
garden/schemes/: __init__.py  message.py
garden/static/css/: reset.css  style.css
garden/static/js/: feedback-modal.js  font-size-adjust.js  menu-control.js
garden/templates/: base-user.html  base.html  footer-test.html  index.html
garden/utils/: __init__.py  convertor.py  translation.py
(+11 files in other folders)
