[project]
name = "garden"
version = "0.1.0"
description = "School garden learning portal"
authors = [
    {name = "svbabaya", email = "babayan.serge@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
]

[dependency-groups]
dev = [
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
